kube-gitops/k3s/ingressroutes/argocd.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`argocd.k3s.<your-domain.tld>`)
      kind: Rule
      services:
        - name: argocd-server
          port: 80
  tls: {}
