kube-gitops/k3s/ingressroutes/authentik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`authentik.k3s.kecskemethy.org`)
      kind: Rule
      services:
        - name: authentik-server
          port: 80
  tls: {}
