kube-gitops/k3s/ingressroutes/headlamp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.k3s.<your-domain.tld>`)
      kind: Rule
      services:
        - name: headlamp
          port: 80
  tls: {}
